# mlir-xten

./: CMakeLists.txt
dlnn-mlir/: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  README.md
dlnn-mlir/cmake/: GitRevision.cmake  MLIRUtils.cmake
dlnn-mlir/docs/: DesignRationale.md
dlnn-mlir/include/: CMakeLists.txt  cmake.inc.in  git.inc.in  version.cpp.inc
dlnn-mlir/include/dlnn-mlir/: CMakeLists.txt
dlnn-mlir/include/dlnn-mlir/Concepts/: Concepts.h  Concepts.td  Inference.td
dlnn-mlir/include/dlnn-mlir/Conversion/: CMakeLists.txt  Passes.h  Passes.td
dlnn-mlir/include/dlnn-mlir/Conversion/DLNNToFunc/: DLNNToFunc.h
dlnn-mlir/include/dlnn-mlir/Dialect/DLNN/: CMakeLists.txt  Enums.h  Enums.td
dlnn-mlir/include/dlnn-mlir/Dialect/DLNN/IR/: Attributes.h  Attributes.td  Base.h  Base.td  CMakeLists.txt  DLNN.h  Ops.h  Ops.td  Types.h  Types.td
dlnn-mlir/include/dlnn-mlir/Dialect/DLNN/Interfaces/: CMakeLists.txt  EnclaveOpInterface.h  EnclaveOpInterface.td  GraphInterface.h  GraphInterface.td  NodeInterface.h  NodeInterface.td  ScalarInterface.h  ScalarInterface.td  VolumeInterface.h  VolumeInterface.td  VolumeOpInterface.h  VolumeOpInterface.td
dlnn-mlir/include/dlnn-mlir/Dialect/DLNN/Transforms/: CMakeLists.txt  Passes.h  Passes.td
dlnn-mlir/include/dlnn-mlir/Dialect/DLNN/Utils/: CommaSeparated.h  LazyMap.h  OpTiedValue.h  Organization.h  Presburger.h  STLExtras.h
dlnn-mlir/lib/Conversion/: CMakeLists.txt  PassDetail.h
dlnn-mlir/lib/Conversion/DLNNToFunc/: CMakeLists.txt  DLNNToFunc.cpp
dlnn-mlir/lib/Dialect/: CMakeLists.txt
dlnn-mlir/lib/Dialect/DLNN/: CMakeLists.txt  Enums.cpp
dlnn-mlir/lib/Dialect/DLNN/IR/: Attributes.cpp  Base.cpp  CMakeLists.txt  Ops.cpp  Types.cpp
dlnn-mlir/lib/Dialect/DLNN/Interfaces/: CMakeLists.txt  EnclaveOpInterface.cpp  GraphInterface.cpp  NodeInterface.cpp  ScalarInterface.cpp  VolumeInterface.cpp  VolumeOpInterface.cpp
dlnn-mlir/lib/Dialect/DLNN/Transforms/: ApplyTiling.cpp  CMakeLists.txt  Flatten.cpp  PassDetail.h  Simplify.cpp
dlnn-mlir/lib/Dialect/DLNN/Utils/: CMakeLists.txt  Organization.cpp  Presburger.cpp
dlnn-mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
dlnn-mlir/test/Conversion/DLNNToFunc/: dlnn-to-func.mlir
dlnn-mlir/test/Dialect/DLNN/: apply-tiling.mlir  flatten.mlir  graph-invalid.mlir  inlining.mlir  simplify.mlir  types-invalid.mlir
dlnn-mlir/test/dlnn-opt/: dlnn-opt.mlir
dlnn-mlir/tools/: CMakeLists.txt
dlnn-mlir/tools/dlnn-lsp-server/: CMakeLists.txt  dlnn-lsp-server.cpp
dlnn-mlir/tools/dlnn-opt/: CMakeLists.txt  dlnn-opt.cpp
lib/Conversion/: ATenToXTenPass.cpp  XTenToAffine.cpp  XTenToLinalg.cpp
lib/Transform/: ATenVisualGraph.cpp  XTenMinimizeLiveTensors.cpp  operators_supported.json
mock/: fused.json  original.json  vitis_analyzer_graphs.flexml_summary
test/: CMakeLists.txt
test/lib/: CMakeLists.txt
tools/aten-opt/: CMakeLists.txt  aten-opt.cpp
(+20 files in other folders)
